--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
 package: github.com/DistributedSolutions/DIMWIT
 import:
 - package: github.com/dustin/go-humanize
+- package: github.com/mattn/go-sqlite3
 - package: golang.org/x/crypto
   subpackages:
   - ed25519
