--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,7 @@ package: github.com/DistributedSolutions/DIMWIT
 import:
 - package: github.com/dustin/go-humanize
 - package: github.com/mattn/go-sqlite3
+- package: github.com/FactomProject/factom
 - package: golang.org/x/crypto
   subpackages:
   - ed25519
