--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ install:
         - go get -v github.com/Masterminds/glide
         - cd $GOPATH/src/github.com/Masterminds/glide && git checkout tags/v0.12.3 && go install && cd -
         - glide install
+before_script:
+        - go fmt ./...
+        - go vet $(glide nv)
 script:
         - go build -v
         - go test -v $(glide nv)
