--- a/glide.yaml
+++ b/glide.yaml
@@ -1,9 +1,14 @@
 package: github.com/DistributedSolutions/DIMWIT
 import:
+- package: github.com/FactomProject/factom
+- package: github.com/boltdb/bolt
 - package: github.com/dustin/go-humanize
 - package: github.com/mattn/go-sqlite3
-- package: github.com/FactomProject/factom
-- package: github.com/leanovate/gopter
 - package: golang.org/x/crypto
   subpackages:
   - ed25519
+testImport:
+- package: github.com/leanovate/gopter
+  subpackages:
+  - gen
+  - prop
