--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/DistributedSolutions/DIMWIT
 import:
 - package: github.com/FactomProject/factom
-  version: v0.3.5
+  version: develop
 - package: github.com/boltdb/bolt
   version: v1.3.0
 - package: github.com/dustin/go-humanize
