--- a/glide.yaml
+++ b/glide.yaml
@@ -20,3 +20,7 @@ testImport:
   subpackages:
   - gen
   - prop
+- package: github.com/adams-sarah/prettytest
+- package: github.com/adams-sarah/test2doc
+- package: github.com/gorilla/mux
+  version: v1.3.0
