--- a/glide.yaml
+++ b/glide.yaml
@@ -24,6 +24,7 @@ testImport:
 - package: github.com/adams-sarah/test2doc
 - package: github.com/gorilla/mux
   version: v1.3.0
+- package: github.com/gorilla/rpc
 - package: github.com/prometheus/client_golang
   subpackages:
   - prometheus
