--- a/glide.yaml
+++ b/glide.yaml
@@ -23,8 +23,11 @@ testImport:
 - package: github.com/adams-sarah/prettytest
 - package: github.com/adams-sarah/test2doc
 - package: github.com/gorilla/mux
-  version: v1.3.0
+  subpackages:
+    - v2
 - package: github.com/gorilla/rpc
+  subpackages:
+    - v2
 - package: github.com/prometheus/client_golang
   subpackages:
   - prometheus
